fix: minor spacing issues in pipeline variables (#2267)
* fix: minor spacing issues in pipeline variables

* fix: minor spacing issues in pipeline variables

--- a/src/modules/70-pipeline/components/PipelineStudio/PipelineVariables/PipelineVariables.module.scss
+++ b/src/modules/70-pipeline/components/PipelineStudio/PipelineVariables/PipelineVariables.module.scss
@@ -97,8 +97,8 @@
         &::before {
           content: '';
           display: block;
-          width: 13px;
-          height: 13px;
+          width: 15px;
+          height: 15px;
           background: linear-gradient(147.14deg, #73dfe7 6.95%, #0063f7 93.05%);
           opacity: 0.6;
           border-radius: 3px;
@@ -119,7 +119,7 @@
       }
 
       :global(.Accordion--details) {
-        padding-top: var(--spacing-medium);
+        padding: var(--spacing-medium) var(--spacing-large);
       }
     }
   }
